--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
       
    
-        <img id="img" src="../assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="">
+        <img id="img" src="./assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="">
 
     
     </main>
