--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body >
     <header>
-        <h1>API de Rick and Morty</h1>
+        <h1>  Rick and Morty</h1>   
         <div id="search">
-            <input type="text" placeholder="Pesquisar" id="searchInput">
-            <svg onclick="searchCharacter()"
+            <input type="text" placeholder="Pesquisar" id="searchInput"><button onclick="searchByName()" style="background: transparent; border: none;"><svg 
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" classs="bi bi-search"
                 viewBox="0 0 16 16">
                 <path
                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
             </svg>
+            </button>
         </div>
     </header>
 
