--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="modal fade  bg-btn-br"  id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true" data-bs-dismiss="modal" aria-label="Close">
         <div class="modal-dialog card-modal" >
-            <div class="modal-content text-center " id="modal-content">
+            <div class="modal-content text-center  bg-dark " id="modal-content">
                 
             </div>
           </div>
